load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "config_types",
    visibility = ["//visibility:public"],
    hdrs = ["config_types.hh"],
    deps = ["@nlohmann_json//:json"],
)

cc_binary(
    name = "init_module",
    srcs = ["init_module.cc"],
    deps = [
        ":config_types",
        "@gflags",
    ],
)

cc_binary(
    name = "add_module_version",
    srcs = ["add_module_version.cc"],
    deps = [
        ":config_types",
        "@gflags",
        "@boringssl//:crypto",
    ],
)
